# billiards-scripts

./: .gitignore  build_env.sh  check_status.py  check_status.sh  checkout.sh  compile.sh  create_makefile.py  create_yocto.sh  docker-compose.yml  optimize_imports.py
docker/: Dockerfile  build_unsqlite.sh
ide/: CMakeLists.txt  create_links.sh
ide/run_fragments/: common_fragments.h  run_bank_shot.h  run_fragment.cpp  run_glance_code.h  run_orient_pocket.h
ide/tests/: SolutionsTracker.h  extracting_from_test.h  run_tests.cpp  test_boost_fs.cpp  test_glance.cpp  test_glance_system.cpp  test_gmp_poly.cpp  test_higher_order_polys.cpp  test_layout_manager.cpp  test_mongodb.cpp  test_mpfr.cpp  test_parse_poly.cpp  test_polynomials.cpp  test_shot_calculation.cpp  test_sparse_reduction.cpp  test_systems.cpp  test_triangulation.cpp  write_shot.h
ide/tmp/: solve_cubic.cpp
old/: script.sh
sage/: exp.tex  generate_code_from_sage.py
sage/scripts/: .old.sage.kate-swp  common.py  glance.sage  glance_to_pocket.sage  old.sage  testing.sage
scripts/: hit_config.sh  hit_layout.sh  hit_projection.sh
scripts/node-app/: driver.mjs  package.json  show_shot.mjs
yocto/: notes.txt  website.txt
yocto/docker/: Dockerfile  cmds.txt
yocto/network/: notes.txt
yocto/qemu/: notes.txt
